@@ -1,3 +1,7 @@
+2002-09-18  Chris Demetriou  <cgd@broadcom.com>
+
+	* config/tc-mips.c (md_apply_fix3): Just return for BFD_RELOC_8.
+
 2002-09-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* config/tc-mips.c (s_change_section): Fix parsing. Code cleanup.
